fix: heigh button too hight

--- a/src/modules/airdrop2/BuilderSection/styles.module.scss
+++ b/src/modules/airdrop2/BuilderSection/styles.module.scss
@@ -40,6 +40,10 @@
   &:hover {
     opacity: 0.8,
   }
+
+  @include is-mobile {
+    height: auto;
+  }
 }
 
 .shareLink {
